extract data to .ts file, fix graphic effects visibility

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -111,9 +111,10 @@ ul {
 .graphic-glow {
     position: absolute;
     border-radius: 50%;
-    filter: blur(80px);
+    filter: blur(90px);
     z-index: 0;
     pointer-events: none;
+    opacity: 0.8;
 }
 
 /* Animations */
